# megu-4chan

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-package.yml
src/megu_4chan/: __init__.py  constants.py  helpers.py  thread.py  types.py  utils.py
src/megu_4chan/plugins/: __init__.py  thread.py
tests/: conftest.py  strategies.py  test_thread.py  test_utils.py
