[tool.poetry]
name = "megu-4chan"
version = "0.1.0"
description = "Megu extractor plugin for 4chan.org"
authors = ["Stephen Bunn <stephen@bunn.io>"]
maintainers = []
license = "GPL-3.0-or-later"
packages = [
  { include = "megu_4chan", from = "src" }
]
readme = "README.md"
homepage = "https://github.com/stephen-bunn/megu-4chan"
repository = "https://github.com/stephen-bunn/megu-4chan"
keywords = [
  "megu",
  "plugin",
  "extractor",
  "4chan"
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/stephen-bunn/megu-4chan/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
rope = "^1.6.0"
coverage = {extras = ["toml"], version = "^7.0.5"}
toml = "^0.10.2"
hypothesis = "^6.63.0"
pytest-xdist = "^3.1.0"
pytest-sugar = "^0.9.6"
megu = {git = "https://github.com/stephen-bunn/megu", rev = "v2"}
respx = "^0.20.1"
httpx = "^0.23.3"


[tool.black]
line-length = 100
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "hug"
src_paths = ["src", "test"]
line_length=100
multi_line_output=3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-rxsX",
  "--flake8",
  "--cov",
  "--cov-report=term:skip-covered",
  "--cov-report=xml",
  "--numprocesses=auto",
]
norecursedirs = [
  ".git",
  "dist",
  "docs"
]
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
flake8-ignore = [
  "docs/source/*.py ALL",
  "tests/*.py ALL"
]
markers = [
  "integration: marks a test as an integration test."
]

[tool.coverage.run]
branch = true
parallel = true
disable_warnings = ["no-data-collected"]
source = ["src/megu_4chan/"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
